fix: revamp text alignment feature details (#367)

--- a/src/newUi.scss
+++ b/src/newUi.scss
@@ -3347,6 +3347,10 @@ th.sortable {
   line-height: 20px;
   letter-spacing: 0.03em;
   text-align: left;
+
+  & .address-container-description {
+    width: 100%;
+  }
 }
 
 .token-option {
@@ -3400,7 +3404,7 @@ th.sortable {
 .summary-balance-info-container {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: baseline;
 }
 
 .container-big-links {
